# sc_gelflog_forwarder

./: .gitignore  README.md  message_codes.yaml  scgelflogforwarder.cabal
app/: Main.hs
hs-src/: Lib.hs
hs-src/TheHenrik/: LogEntry.hs  NetworkAddress.hs  UDPPacker.hs
test/: Spec.hs
