name:                scgelflogforwarder
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/githubuser/simple#readme
license:             BSD3
license-file:        LICENSE
author:              Author name here
maintainer:          example@example.com
copyright:           2017 Author name here
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      hs-src
  exposed-modules:     Lib
                     , TheHenrik.LogEntry
                     , TheHenrik.NetworkAddress
                     , TheHenrik.UDPPacker
  build-depends:       base >= 4.7 && < 5
                     , cereal >= 0.5.4
                     , lens >= 4.1
                     , random >= 1.1
                     , containers >= 0.5
                     , file-embed >= 0.0.10
                     , array >= 0.5
                     , network >= 2.6
                     , regex-tdfa >= 1.2
                     , regex-base >= 0.93
                     , time >= 1.6
                     , text >= 1.1
                     , zlib >= 0.6
                     , aeson >= 1
                     , yaml >= 0.8
                     , unordered-containers >= 0.2.6
                     , vector >= 0.11
                     , blake2 >= 0.2
                     , bytestring >= 0.10
                     --, collections >= 0.3
                     , hedis >= 0.9.7
                     , transformers >= 0.5
  default-language:    Haskell2010

executable the-henrik
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , scgelflogforwarder
                     , optparse-applicative >= 0.13
                     , attoparsec >= 0.13
                     , conduit >= 1.2
                     , cereal >= 0.5
                     , network >= 2.6
                     , bytestring >= 0.10
                     , lens
                     , hedis
                     , transformers

  default-language:    Haskell2010

test-suite simple-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , scgelflogforwarder
                     , hspec >= 2.3
                     , QuickCheck >= 2.9
                     , bytestring >= 0.10
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/githubuser/simple
